--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">CoolPhotos</string>
+    <string name="title_settings">Settings</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="tv_mode">Subconscious/Conscious</string>
+    <string name="tv_consious">Normal mode</string>
+    <string name="tv_subconsious">Subconscious</string>
     <string name="tv_delay">Delay between slides</string>
     <string name="minutes">minutes</string>
     <string name="minute">minute</string>
@@ -12,5 +14,8 @@
     <string name="milliseconds">milliseconds</string>
     <string name="tv_shuffle_images">Shuffle images</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="nav_photos">Photos</string>
+    <string name="nav_settings">Settings</string>
+    <string name="nav_exit">Exit</string>
+
 </resources>
